x1285: Change InPlaceOpRequest to have a list of work numbers